<resources>
    <string name="app_name">FindMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_table_order">Table order</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_menu_selection">Select product</string>
    <string name="title_activity_sales_summary">Sales</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_authentication">Authentication</string>
    <string name="title_activity_register">Register Activity</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_Sales">Sales Summary</string>
    <string name="email">EMAIL</string>
    <string name="calender">CALENDAR</string>
    <string name="shopping">SHOPPING</string>
    <string name="social_network">SOCIAL NETWORK</string>
    <string name="email_hint">A system for sending and receiving messages electronically over a computer network.</string>
    <string name="calender_hint">Note all your special occasions in calendar and keep them in your finger tips</string>
    <string name="shopping_hint">Shop and get offers, promo codes and discounts on your future purchase.</string>
    <string name="social_network_hint">Stay connected with your friends, colleagues and family globally</string>
    <string name="skip">SKIP</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_main2">Main Activity</string>
    <string name="save">SAVE</string>
    <string name="enter_menu_name">Enter product name</string>
    <string name="enter_menu_price">Enter product price</string>
    <string name="title_activity_create_customer">Create Customer</string>
    <string name="enter_customer_name">Enter customer name</string>
    <string name="enter_customer_number">Enter customer number</string>
    <string name="create_customer">Create customer</string>
    <string name="cancel">Cancel</string>
    <string name="create_menu">Create product</string>
    <string name="name_error">Name not provided</string>
    <string name="price_error">Digit only must be provided for price</string>
    <string name="update">UPDATE</string>
    <string name="price_not_number">Price is not a number</string>
    <string name="phone_not_valid">Not a valid phone number</string>
    <string name="sample_customer">Bukola Bankole</string>
    <string name="sample_customer_number">07066330692</string>
    <string name="success">Success</string>
    <string name="call_customer">Call Customer</string>
    <string name="msg_customer">Message customer</string>
    <string name="no_wanted">Security is important; report any suspicious, wanted or missing individual now!</string>
    <string name="no_customer">Add customer to make me excited</string>
    <string name="no_sales">Haba! You have no open sales.</string>
    <string name="close">Close</string>
    <string name="title_activity_check_out">Check out</string>
    <string name="attach_customer">Attach customer</string>
    <string name="send_invoice">Send invoice</string>
    <string name="appreciate">Appreciate</string>
    <string name="sales">Sales</string>
    <string name="returns">Returns</string>
    <string name="add_returns">Add returns</string>
    <string name="total">Total</string>
    <string name="sample_total">#2300</string>
    <string name="yup_nice_work">Great! Well done</string>
    <string name="clear_returns">Clear Returns</string>
    <string name="close_sales">Close sales</string>
    <string name="not_attached">Customer is not added. Kindly add a customer</string>
    <string name="appreciate_msg">Thanks for your patronage, We wish you had a nice time with us. We look forward to seeing you again.</string>
    <string name="no_sent">Kindly enable permissions for app in your application setting.</string>
    <string name="msg_sent">Message sent</string>
    <string name="sales_today">Sales today</string>
    <string name="today_sales_amount">#0.00</string>
    <string name="ongoing_sales">Open sales</string>
    <string name="sales_week">Sales this week</string>
    <string name="sales_year">Sales this year</string>
    <string name="sales_month">Sales this month</string>
    <string name="success_create_more">Success!. You can create more. use the \'close\' when you are done</string>
    <string name="hint_search">Search</string>
    <string name="send_message">message</string>
    <string name="_continue">Continue</string>
    <string name="create_order_label">New order</string>
    <string name="enter_order_name">Enter order name</string>
    <string name="upload">Bulk Upload</string>
    <string name="excel_no_header">Excel sheet does not have name and/or price header, Kindly add \"Name\" and \"Price\" to the header</string>
    <string name="no_file_manager">No suitable File Manager was found</string>
    <string name="permission_granted">Permission granted, Kindly try again</string>
    <string name="no_permission">"Oops you just denied the permission"</string>
    <string name="hint_message_all">Message All</string>
    <string name="message_all_customers">Message all customers</string>
    <string name="send">SEND MESSAGE</string>
    <string name="type_message_here">Type message here</string>
    <string name="title_activity_wanted_details">WantedDetails</string>
    <string name="sample_name">Kolade Olowolafe</string>
    <string name="sample_age">Age : 23</string>
    <string name="lastseen">Where last seen</string>
    <string name="lastseen_value">2 days ago</string>
    <string name="when_value">Ikeja road</string>
    <string name="when_last_seen">When last seen</string>
    <string name="where_last_seen">Where last seen</string>
    <string name="no_reports">No report created so far! Be conscious</string>
    <string name="title_activity_my_report_details">Report Details</string>
    <string name="title_activity_found">Founds</string>
    <string name="no_found">Together we can find them!</string>
    <string name="sample_date">10 days ago</string>
    <string name="date">Date</string>
    <string name="where">Location</string>
    <string name="sample_location">Ojota road</string>
    <string name="enter_person_name">Enter person name</string>
    <string name="enter_person_age">Enter person age</string>
    <string name="enter_person_height">Enter person height in ft</string>
    <string name="enter_person_sex">Enter person sex</string>
    <string name="enter_person_complexion">Enter person complexion</string>
    <string name="enter_nearest_police_station">Report to which station?</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="name">Name</string>
    <string name="sex">Gender</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="complexion">Complexion</string>
    <string name="complexion_brown">Brown</string>
    <string name="complexion_dark">Dark</string>
    <string name="complexion_light">Light</string>
    <string name="police_station">Nearest Police Station</string>
    <string name="send_report">Send Report</string>
    <string name="wanted">Wanted</string>
    <string name="kidnapped">Kidnapped</string>
    <string name="missing">Missing</string>
    <string name="report_type">Report type</string>
    <string name="_age">23</string>
    <string name="sample_height">5ft</string>
    <string name="sample_complexion">Light</string>
    <string name="sample_police_pro">Lagos state PRO</string>
    <string name="found_report">Report as found</string>
    <string name="view_sightings">View Sighting Reports</string>
    <string name="create_sighting">Create Sighting</string>
    <string name="call_reporting_line">Call Reporting line</string>
    <string name="call_reporting_number">Call Reporting Line</string>
    <string name="title_activity_sighting">Sightings</string>
    <string name="no_sighting">No Sighting reported so far.</string>
    <string name="sample_comment">This is just a random comment from who ever sights occurence of reported incidence</string>
    <string name="comment">Comment</string>
    <string name="enter_comment">Add other important details here</string>
    <string name="enter_location">Enter Location in full</string>
    <string name="have_evidence">Any Picture Evidence? Upload</string>
    <string name="user">Enter Profile Details</string>
    <string name="enter_name">Name</string>
    <string name="enter_number">Phone number</string>
    <string name="sightings">Sightings</string>
    <string name="create_report">Create Report</string>
    <string name="empty_error">Field cannot be empty</string>
    <string name="picture_not_loaded">You have not uploaded picture</string>
    <string name="storage_permitted">Now you can upload profile picture</string>
    <string name="failed">An error ocurred. Kindly check your connection</string>
    <string name="connection_error">Internet connection error.</string>
    <string name="wait">Please wait...</string>
    <string name="uploading_picture">Uploading picture...</string>
    <string name="sending_report">Sending report...</string>
    <string name="sex_not_selected">Choose a sex</string>
    <string name="type_not_selected">Type not selected</string>
    <string name="complexion_not_selected">Complexion not selected</string>
    <string name="to_notify">You will be notified when upload is completed!. Thanks for the sighting</string>
    <string name="to_notify_report">You will be notified when upload is completed!. Thanks for the reporting</string>
</resources>
