<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sales"
        android:orderInCategory="100"
        android:title="@string/title_activity_sales_summary"
        android:icon="@drawable/ic_business_white_18dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_dashboard"
        android:orderInCategory="100"
        android:title="@string/title_dashboard"
        android:icon="@drawable/ic_dashboard_white_18dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/title_profile"
        android:icon="@drawable/ic_person_black_24dp"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_18dp"
        app:showAsAction="never"/>

</menu>
