<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.rotimi.finder.main.ReportDetails">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/myreport.details.picture"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="visible"
                android:src="@drawable/empty_profile2"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    android:text="@string/name"
                    android:gravity="left"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/myreport.details.name"
                    android:layout_marginBottom="10dp"
                    android:textSize="12dp"
                    android:drawableBottom="@color/black_overlay"
                    android:inputType="text"
                    android:hint="@string/sample_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="2dp"
                    android:background="@color/light_grey"/>

                <TextView
                    android:text="@string/sex"
                    android:gravity="left"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    android:layout_marginBottom="10dp"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/myreport.details.sex"
                    android:layout_marginBottom="10dp"
                    android:textSize="12dp"
                    android:drawableBottom="@color/black_overlay"
                    android:inputType="text"
                    android:hint="@string/sex_male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="2dp"
                    android:background="@color/light_grey"/>

                <TextView
                    android:text="@string/age"
                    android:gravity="left"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/myreport.details.age"
                    android:layout_marginBottom="10dp"
                    android:textSize="12dp"
                    android:drawableBottom="@color/black_overlay"
                    android:inputType="text"
                    android:hint="@string/_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="2dp"
                    android:background="@color/light_grey"/>

                <TextView
                    android:text="@string/height"
                    android:gravity="left"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/myreport.details.height"
                    android:layout_marginBottom="10dp"
                    android:textSize="12dp"
                    android:drawableBottom="@color/black_overlay"
                    android:inputType="text"
                    android:hint="@string/sample_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="2dp"
                    android:background="@color/light_grey"/>

                <TextView
                    android:text="@string/complexion"
                    android:gravity="left"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/myreport.details.complexion"
                    android:layout_marginBottom="10dp"
                    android:textSize="12dp"
                    android:drawableBottom="@color/black_overlay"
                    android:inputType="text"
                    android:hint="@string/sample_complexion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="2dp"
                    android:background="@color/light_grey"/>

                <TextView
                    android:text="@string/police_station"
                    android:gravity="left"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/myreport.details.police_station"
                    android:layout_marginBottom="10dp"
                    android:textSize="12dp"
                    android:drawableBottom="@color/black_overlay"
                    android:inputType="text"
                    android:hint="@string/sample_police_pro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="2dp"
                    android:background="@color/light_grey"/>

                <TextView
                    android:text="@string/report_type"
                    android:gravity="left"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/myreport.type.police_station"
                    android:layout_marginBottom="10dp"
                    android:textSize="12dp"
                    android:drawableBottom="@color/black_overlay"
                    android:inputType="text"
                    android:hint="@string/kidnapped"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="2dp"
                    android:background="@color/light_grey"/>
                <TextView
                    android:id="@+id/myreport.details.report_found"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textSize="16dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorAccent"
                    android:elevation="2dp"
                    android:textAllCaps="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:foreground="?android:selectableItemBackground"
                    android:text="@string/found_report"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
